# tinyj2c

./: .gitignore  CMakeLists.txt  README.md  mingw32-build.bat  mingw64-build.bat  posix_build.sh  sys.properties
app/: .gitignore  CMakeLists.txt  app.vcxproj
app/app.xcodeproj/: project.pbxproj
app/java/com/egls/test/: BpDeepTest.java  Foo1.java  Foo2.java  SpecTest.java
app/java/java/io/: ByteArrayInputStream.java  ByteArrayOutputStream.java  ConsoleOutputStream.java  DataInputStream.java  DataOutputStream.java  EOFException.java  IOException.java  InputStream.java  OutputStream.java  PrintStream.java  RandomAccessFile.java  Reader.java  Serializable.java  Writer.java
app/java/java/lang/: ArithmeticException.java  ArrayIndexOutOfBoundsException.java  Boolean.java  Byte.java  Character.java  Class.java  ClassCastException.java  ClassNotFoundException.java  CloneNotSupportedException.java  Cloneable.java  Comparable.java  Double.java  Enum.java  Error.java  Exception.java  Float.java  IllegalArgumentException.java  IllegalStateException.java  IllegalThreadStateException.java  IndexOutOfBoundsException.java  InstantiationException.java  Integer.java  InterruptedException.java  Iterable.java  Long.java  Math.java  NoSuchFieldException.java  NoSuchMethodException.java  NullPointerException.java  NumberFormatException.java  Object.java  OutOfMemoryError.java  Override.java  Runnable.java  Runtime.java  RuntimeException.java  Short.java  StackTraceElement.java  String.java  StringBuffer.java  (+7 more)
app/java/java/lang/annotation/: Annotation.java
app/java/java/lang/ref/: Reference.java  ReferenceQueue.java  WeakReference.java
app/java/java/lang/reflect/: Array.java  Constructor.java  Field.java  Method.java
app/java/java/util/: AbstractCollection.java  AbstractList.java  AbstractMap.java  AbstractSet.java  ArrayList.java  Calendar.java  CalendarImpl.java  Collection.java  ConcurrentModificationException.java  Date.java  Enumeration.java  HashMap.java  HashSet.java  Hashtable.java  Iterator.java  LinkedHashMap.java  List.java  ListIterator.java  Map.java  NoSuchElementException.java  Random.java  Set.java  TimeZone.java  TimeZoneImpl.java  Vector.java  WeakHashMap.java
app/java/test/: Foo1.java  Foo2.java  Foo3.java  HelloWorld.java  SpecTest.java
app/vm/: garbage.c  garbage.h  jassist.c  jni.c  jvm.c  jvm.h  jvmsvc.c  jvmtype.h  main.c  native_std.c
class2c/: pom.xml
(+26 files in other folders)
